--- a/package.json
+++ b/package.json
@@ -6,16 +6,28 @@
     "start": "next start"
   },
   "dependencies": {
+    "@codemirror/lang-xml": "^0.20.0",
+    "@codemirror/language": "^0.20.0",
+    "@codemirror/state": "^0.20.0",
+    "@codemirror/view": "^0.20.4",
+    "@lezer/highlight": "^0.16.0",
+    "@radix-ui/react-dialog": "^0.1.7",
+    "@uiw/react-codemirror": "^4.7.0",
+    "classnames": "^2.3.1",
+    "codemirror": "^5.65.3",
     "next": "latest",
+    "outdent": "^0.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@types/codemirror": "^5.60.5",
     "@types/node": "17.0.4",
+    "@types/prettier": "^2.6.0",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.5",
-    "prettier": "^2.5.1",
+    "prettier": "^2.6.2",
     "prettier-plugin-tailwindcss": "^0.1.1",
     "tailwindcss": "^3.0.7",
     "typescript": "4.5.4"
